[gd_scene load_steps=2 format=3 uid="uid://notification_ui"]

[ext_resource type="Script" path="res://game/scripts/ui/NotificationUI.gd" id="1_script"]

[node name="NotificationUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
offset_left = 156.0
offset_top = 20.0
offset_right = 356.0
offset_bottom = 70.0

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IconRect" type="TextureRect" parent="Panel/HBox"]
visible = false
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
text = "Notification Title"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Message text"
horizontal_alignment = 1
